--- a/style.css
+++ b/style.css
@@ -351,3 +351,12 @@ h1 {
     grid-column: 1 / 2;
     grid-row: 1 / -1;
 }
+
+.card:hover {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
+    transition: all 0.4s ease-in-out;
+}
+
+.card {
+    transition: all 0.4s ease-in-out;
+}
